--- a/latex/prelude.tex
+++ b/latex/prelude.tex
@@ -12,7 +12,7 @@ project \gls{R3D} \cite{Jung:2015:SDA:2802768.2802837}.
 
 As part of the \gls{R3D} project, a round-trip framework
  was developed.This framework also includes a
-graphical editor for \acr{SSIML} models, to describe \gls{3D} applications. Then
+graphical editor for \acr{SSIML} \cite{Lenk:2012:MID:2338714.2338742} models, to describe \gls{3D} applications. Then
 \gls{R3D} can be used to generate boilerplate code for multiple programming
 languages, such as JavaScript, Java or C++, and an \gls{X3D} file describing
 the scene. The \gls{X3D} file may contain references to other \gls{X3D} files
@@ -28,8 +28,8 @@ The scene structure (see Listing \ref{list:x3dscene}) is mostly generated. Attri
 such as transform nodes, need to be adjusted in order to compose the
 overall \gls{3D} scene.
 
-% \includegraphics{Picture of a car with the tires in the center}\\
-% \includegraphics{Picture of a car with the tires where they belong to}
+% \includegraphics{Figure of a car with the tires in the center}\\
+% \includegraphics{Figure of a car with the tires where they belong to}
 
 This can be achieved by adjusting \emph{translate}, \emph{rotate} and
 \emph{scale} properties to arrange \gls{3D} objects. To exacerbate this problem
@@ -68,21 +68,21 @@ there is no graphical tool that meets both of the following requirements:
   	\includegraphics[width=0.9\textwidth]{../assets/wheel4.png}\\
     d)
   \end{minipage}
-  \caption{Pictures 1 - 3 show common orientations the \gls{3D} model of a wheel could have. Picture 4 shoes the worst case.}
+  \caption{Figures \ref{fig:wheel}a-c show common orientations the \gls{3D} model of a wheel could have. Figure \ref{fig:wheel}d shoes the worst case.}
 	\label{fig:wheel}
 \end{figure}
 
-Figure \ref{fig:wheel} demonstrates multiple orientations a \gls{3D} model of a wheel can have. Picture a) to c) are common
+Figure \ref{fig:wheel} demonstrates multiple orientations a \gls{3D} model of a wheel can have. Figures \ref{fig:wheel}a-c are common
 orientations, since it is disputable which of these could be considered the
 norm. But if one depends on art from 3rd parties, the orientation and position
-could be completely arbitrary like in picture d).
+could be completely arbitrary like in Figure \ref{fig:wheel}d).
 
 These properties could be added and adjusted via any text editor by opening the
 generated \gls{X3D} file, but the resulting work-flow is not user-friendly. The
 following list explains the work-flow using just a text editor.
 
 \begin{enumerate*}
-  \item Model the \gls{3D} application, including \gls{3D} the scene structure.
+  \item Model the \gls{3D} application, including the \gls{3D} scene structure.
   \item Generate the \gls{3D} scene and the application code.
   \item Run the application and evaluate the scene and think about what objects need to go where and whether they need to be scaled.
   \item Type random translation, rotation and scale values into the transform nodes.
@@ -90,7 +90,7 @@ following list explains the work-flow using just a text editor.
   \item Go back to 4. until all objects are placed correctly.
 \end{enumerate*}
 
-Tools like Maya or Blender could also be used for this, but their import
+Tools like Maya or Blender could be used for this, but their import
 and export filters discard important meta-data that is necessary for the
 round-trip transformation. This is what \gls{SceGraToo} is meant to be. \gls{SceGraToo} addresses both of these issues. It allows for loading the root \gls{X3D} file and changing all transformations, containing the inline nodes,
 using mouse interactions. For fine grained control \gls{SceGraToo} also
